[17622][17631][17621][17662] Squash commit for these bug ids
commit 24dc5ec4b42d34fb76661449539dc594ae66f80d
Merge: aba7adc d4d1b5c
Author: Mehul Dudi <mehul@freshdesk.com>
Date:   Thu Jun 16 14:35:39 2016 +0530

    Merge branch 'prestaging' into swat

commit aba7adce06600cf19c67db9e128057af0b78ac89
Merge: 3caa6cc 8a0cad5
Author: Rohit Agarwal <rohita@freshdesk.com>
Date:   Thu Jun 16 14:29:13 2016 +0530

    Merge branch 'swat' of github.com:freshdesk/helpkit into swat

commit 8a0cad59448a1c453b7cb3593c828dce9ebc0a90
Author: Girish Koundinya <girish.k@freshdesk.com>
Date:   Tue Jun 14 19:42:49 2016 +0530

    Review changes for D497

commit 3caa6ccfad560db0257556ac96bef3b212b09396
Author: Rohit Agarwal <rohita@freshdesk.com>
Date:   Tue Jun 14 18:07:23 2016 +0530

    Changes from review

    Declared variables with var
    Moved i18n string to _scriptvars.html.erb

commit 13db87ccdd1a3c857ccaa026ccab1d82832adb72
Author: Rohit Agarwal <rohita@freshdesk.com>
Date:   Tue Jun 14 16:10:08 2016 +0530

    Shift Multi Select & Product Notifications

    Committing for mehul@freshdesk.com

commit 39628c10560cdabe8e4461ab0017f30d5db6b2f5
Author: Rohit Agarwal <rohita@freshdesk.com>
Date:   Tue Jun 14 14:45:14 2016 +0530

    Minor code refactor

commit adda27ce94ecabc9361220cbb82382c211261178
Author: Rohit Agarwal <rohita@freshdesk.com>
Date:   Tue Jun 14 14:42:47 2016 +0530

    Moved attachment missing functions to JS file

commit 7100d6e74bc1fb06b64f378594865bcf5bae8cba
Author: Girish Koundinya <girish.k@freshdesk.com>
Date:   Tue Jun 14 10:35:44 2016 +0530

    Personalized footer feedback for articles

    Differential Revision: http://wall.freshdesk.com/D497

commit d8817bda1b67ac6740ac4ced76aab31fb2d6383a
Author: Rohit Agarwal <rohita@freshdesk.com>
Date:   Mon Jun 13 14:55:15 2016 +0530

    Adding attachment missing en.yml to all forms

commit aa3f3916ec4b1dbb3112fac3ff81d35db2b0f2b8
Author: Rohit Agarwal <rohita@freshdesk.com>
Date:   Mon Jun 13 14:51:21 2016 +0

--- a/public/src/app/_shortcuts-chart.scss
+++ b/public/src/app/_shortcuts-chart.scss
@@ -103,8 +103,7 @@
 //					Ticket list item selector animation
 // =============================================================================
 .sc-item-selected .sc-item-cursor{
-	@include animation(fadeIn 100ms);
-	width:$TKT_LIST_VIEW_PRIORITY_BORDER_SIZE * 2;
+	width:4px;
 }
 .fade-out .sc-item-cursor{
 	@include animation(fadeOut 100ms);
